--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appco",
+  "name": "zoe-community-landing",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://appco-react.themetags.com",
